--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">WeatherMVP</string>
+    <string name="app_name">Weather</string>
+    <string name="home_screen_name">Home</string>
+    <string name="settings_screen_name">Settings</string>
 </resources>
